Corrección de navbar

--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
       <button onclick="goToSection(4)" title="Comentarios"><i class="fas fa-comment"></i></button>
     </div>
     <div class="navbar-title">
-      <img src="img/Logo.png" alt="Logo" />
-      <span>EcoReto</span>
+      <img src="img/Logo5.png" alt="Logo" />
     </div>
   </nav>
 
