--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="App educativa que promueve la conciencia climática con retos interactivos basados en el ODS 13">
+  <meta name="description" content="App educativa que promueve la conciencia climática con retos interactivos basados en el ODS 13" />
   <title>EcoReto - Acción por el Clima</title>
-  <link rel="icon" href="img/Logo1.png" type="image/png">
+  <link rel="icon" href="img/Logo6.png" type="image/png" sizes="512x512" />
   <!-- Manifest PWA -->
   <link rel="manifest" href="manifest.json" />
   <!-- Estilos -->
   <link rel="stylesheet" href="css/styles.css" />
+  <!-- Responsive al final para que sobrescriba cuando sea necesario -->
+  <link rel="stylesheet" href="css/responsive.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <!-- Fuentes de Google -->
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet" />
 </head>
 <body>
   <!-- Navbar mejorado -->
@@ -82,7 +84,7 @@
       <div class="section">
         <h2 class="section-title">Consejos Ecológicos</h2>
         <div class="tips-container">
-          <!-- Los consejos se pueden cargar dinámicamente desde JS -->
+          <!-- Los consejos se cargarán dinámicamente desde JS -->
         </div>
       </div>
 
@@ -162,8 +164,11 @@
       <a href="#"><i class="fab fa-facebook"></i></a>
     </div>
   </footer>
-
-  <!-- JS principal -->
+  <!-- JS principal como módulo -->
   <script src="js/app.js"></script>
+  <!-- JS adicional (si no usas módulos para todo) -->
+  <script src="js/tips.js"></script>
+  <script src="js/comments.js"></script>
+  <script src="js/pwa.js"></script>
 </body>
 </html>
