modificacion y mejoras en la seccion de consejos

--- a/index.html
+++ b/index.html
@@ -81,13 +81,15 @@
         </div>
       </div>
 
-      <!-- Sección 2: Consejos -->
-      <div class="section">
-        <h2 class="section-title">Consejos Ecológicos</h2>
-        <div class="tips-container">
-          <!-- Los consejos se cargarán dinámicamente desde JS -->
+        <!-- Sección 2: Consejos -->
+        <div class="section">
+          <div class="tips-section">
+            <h2 class="section-title">Consejos Ecológicos</h2>
+            <div class="tips-container">
+              <!-- Los consejos se cargarán dinámicamente desde JS -->
+            </div>
+          </div>
         </div>
-      </div>
 
       <!-- Sección 3: Calculadora -->
       <div class="section">
